--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,9 +28,11 @@ body {
 html,
 body,
 #root {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
   margin: 0;
-  background: #000000;
   overflow: hidden;
 }
